--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,6 +15,7 @@ th{
 }
 
 td {
+  
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
@@ -22,6 +23,12 @@ td {
   
 }
 
-tr:nth-child(even) {
-  background-color: #dddddd;
+tr:hover {
+  background-color: lightgray;
 }
+
+div{
+  cursor: pointer;
+}
+
+
